output/test/llvm/1param.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/test/llvm/1param.llvm:12:7: error: value doesn't match function result type 'i32'
  ret void
      ^
